feat(gameplay): expand Dead Land core systems